remove: skip module loading log